--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   
 <div class="home-header">
   <div class="inner">
-    <h1>Android 资产工作室</h1>
+    <h1>Android UI 小工具</h1>
     <p class="subtitle">
-      一组工具，可轻松为您的 Android 应用生成资源，例如启动器图标。
+      一组超好用的UI小工具，你值得拥有。
     </p>
   </div>
 </div>
